[package]
name = "unpaidme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
simple_logger = "5.0.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"]}
tokio = { version = "1.37.0", features = ["full"]}
serde = { version = "1.0.202", features = ["derive"]}
serde_json = "1.0"
axum = "0.7.5"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"]}
chrono-tz = "0.9.0"
